--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <header>
                         <h1>article header h1</h1>
                         <h1>Aditya was here YOLOLOLOLOLO</h1>
+                        <h2>What the heck?</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
                     </header>
                     <section>
