--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html class="no-js">
     <head>
         <script>
-            a = prompt ("What is your name");
-            alert("Hello" + a);
+            a = prompt ("Awesome code by Aditya: What is your name?");
+            alert("Awesome code by Aditya: Hello, " + a);
         </script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
