asdfasjdflaksjdfl;kasjfl;askdjf

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html class="no-js">
     <head>
         <script>
-            a = prompt ("Awesome code by Aditya: What is your name?");
-            alert("Awesome code by Aditya: Hello, " + a);
+            a = prompt ('What is the password? (hint: its "Aditya"');
+            if(a="Aditya") {
+                alert("Yes!")
+            }
+            else {
+                Window.close();
+            }
         </script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
