--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <script>
-            a = prompt ("What is your name?");
+            name = prompt ("What is your name?");
             alert("Welcome, " + name)
         </script>
         <meta charset="utf-8">
