--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="refresh" content="0; url=http://phased.co.nf/" />
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -24,9 +23,9 @@
                 <h1 class="title">h1.title</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">Innovate</a></li>
+                        <li><a href="#">Create</a></li>
+                        <li><a href="#">MV Comp Sci</a></li>
                     </ul>
                 </nav>
             </header>
@@ -37,15 +36,12 @@
 
                 <article>
                     <header>
-                        <h1>article header h1</h1>
-                        <h1>என்ன are....tu k kya kar rahe ho?</h1>
-                        <h2>What the heck?</h2>
-                        <h2>Bacon Bacon Bacon lol</h2>
-                        <p>Namaskara sirji</p>
+                        <h1>Welcome</h1>
+                        <h1>Hi Guys</h1>
+                        <h2>Lets get started</h2>
                     </header>
                     <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                        <p>Welcome, I encourage you to innovate and create</p>
                     </section>
                     <section>
                         <h2>article section h2</h2>
@@ -61,6 +57,35 @@
                     <h3>aside</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
                 </aside>
+                
+                <style> 
+                div {
+                    width: 100px;
+                    height: 100px;
+                    background: red;
+                    position: relative;
+                    -webkit-animation: myfirst 5s; /* Chrome, Safari, Opera */
+                    animation: myfirst 5s;
+                }
+
+                /* Chrome, Safari, Opera */
+                    @-webkit-keyframes myfirst {
+                    0%   {background:red; left:0px; top:0px;}
+                    25%  {background:yellow; left:200px; top:0px;}
+                    50%  {background:blue; left:200px; top:200px;}
+                    75%  {background:green; left:0px; top:200px;}
+                    100% {background:red; left:0px; top:0px;}
+                }
+
+                /*Standard syntax */
+                @keyframes myfirst {
+                    0%   {background:red; left:0px; top:0px;}
+                    25%  {background:yellow; left:200px; top:0px;}
+                    50%  {background:blue; left:200px; top:200px;}
+                    75%  {background:green; left:0px; top:200px;}
+                    100% {background:red; left:0px; top:0px;}
+                }
+                </style>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
