--- a/index.html
+++ b/index.html
@@ -69,8 +69,22 @@
                     height: 100px;
                     background: red;
                     position: relative;
-                    -webkit-animation: myfirst 5s; /* Chrome, Safari, Opera */
-                    animation: myfirst 5s;
+    /* Chrome, Safari, Opera */
+    -webkit-animation-name: myfirst;
+    -webkit-animation-duration: 5s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-delay: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-play-state: running;
+    /* Standard syntax */
+    animation-name: myfirst;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-play-state: running;
                 }
 
                 /* Chrome, Safari, Opera */
