--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </head>
     <body>
 
-        <div class="header-container">
+        <!-- <div class="header-container">
+            <header class="wrapper clearfix">
                 <nav>
                     <ul>
                         <li><a href="#">Innovate</a></li>
@@ -26,7 +27,8 @@
                         <li><a href="#">MV Comp Sci</a></li>
                     </ul>
                 </nav>
-        </div>
+            </header>
+        </div> -->
 
         <div class="main-container">
             <div class="main wrapper clearfix">
