--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
 
-        <!-- <div class="header-container">
+        <div class="header-container">
             <header class="wrapper clearfix">
                 <nav>
                     <ul>
@@ -28,7 +28,7 @@
                     </ul>
                 </nav>
             </header>
-        </div> -->
+        </div>
 
         <div class="main-container">
             <div class="main wrapper clearfix">
@@ -39,6 +39,7 @@
                         <h1>Lets get started</h1>
                     </header>
                     <section>
+                        <br><br>
                         <p>Welcome, I encourage you to innovate and create</p>
                     </section>
                     <section>
@@ -56,13 +57,14 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
                 </aside>
                 
+                <basdf></basdf>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
         
         <div>
             <style> 
-div {
+basdf {
     width: 100px;
     height: 100px;
     background: red;
