--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 </aside>
                 
             </div> <!-- #main -->
-            <p></p>
+            <div>
+                <p></p>
+            </div>
         </div> <!-- #main-container -->
         
         <div>
