--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 
             </div> <!-- #main -->
             <div>
-                <p></p>
+                <p>hello</p>
             </div>
         </div> <!-- #main-container -->
         
