--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html class="no-js">
     <head>
         <script>
-            name = prompt ("What is your name?");
-            alert("Welcome, " + name)
+            alert("Welcome");
         </script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
