--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ p {
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
+                <h3>footer (or farter)</h3>
             </footer>
         </div>
 
