--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ p {
     75%  {background:green; left:0px; top:200px;}
     100% {background:red; left:0px; top:0px;}
 }
+p:hover {
+    width: 300px;
+}
 </style>
         </div>
         
