--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ p {
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: alternate;
     -webkit-animation-play-state: running;
+    -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
+    transition: width 2s;
     /* Standard syntax */
     animation-name: myfirst;
     animation-duration: 5s;
