--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                     </header>
                     <section>
                         <br>
-                        Welcome, I encourage you to innovate and create<br><br>
+                        Welcome, I encourage you to innovate and create. 
+                        <br> Feel free to make any changes.
+                        <br> Thanks,
+                        <br> Aditya<br><br>
                     </section>
                     <section>
                         <h2>article section h2</h2>
