--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     </header>
                     <section>
                         <br>
-                        Welcome, I encourage you to innovate and create. 
-                        <br> Feel free to make any changes.
+                        Welcome, I encourage you to innovate and create. Feel free to make any changes.
                         <br> Thanks,
                         <br> Aditya<br><br>
                     </section>
