--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </article>
 
                 <aside>
-                    <h3>Aditya Ramkumar</h3>
-                    This site belongs to Aditya! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.<br><br>
+                    <h3>Aditya Ramkumar and Rishi Sawhney</h3>
+                    This site belongs to Aditya and Rishi! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.<br><br>
                 </aside>
                 
             </div> <!-- #main -->
