--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="#">Innovate</a></li>
                         <li><a href="#">Create</a></li>
-                        <li><a href="#">MV Comp Sci</a></li>
+                        <li><a href="http://www.mvcompsci.com">MV Comp Sci</a></li>
                     </ul>
                 </nav>
             </header>
