--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
                 <aside>
                     <h3>Aditya Ramkumar, Rishi Sawhney and the rest of team 2 (add your names)</h3>
-                        <iframe width="300" height="300" src="https://www.youtube.com/watch?v=1cDoRqPnCXU" frameborder="0" allowfullscreen></iframe>
-                    <br><br>
+                        <iframe width="560" height="315" src="//www.youtube.com/embed/videoseries?list=PLNRRmZQHx7IsGdqA6B0UwW92KN6oQwpje" frameborder="0" allowfullscreen></iframe>                    <br><br>
                     This site belongs to Aditya, but not Rishi! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.<br><br>
                 </aside>
                 
