--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ p:hover {
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer (or farter)</h3>
+                <h3>Thank you from Aditya</h3>
             </footer>
         </div>
 
