--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
+                <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
                 <nav>
                     <ul>
                         <li><a href="#">Innovate</a></li>
