--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
+                <button>Button</button>
                 <nav>
                     <ul>
                         <li><a href="#">Innovate</a></li>
