--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
-                <button style = "float:right">Button</button>
+                <a href = "http://google.com">Google
+                    <button style = "float:right">Button</button>
+                </a>
                 <nav>
                     <ul>
                         <li><a href="#">Innovate</a></li>
