--- a/index.html
+++ b/index.html
@@ -20,9 +20,26 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
-                <a href = "http://google.com">Google
-                    <button style = "float:right">Button</button>
-                </a>
+                <div id = "navlink">
+                    <a href = "http://google.com">Google
+                        <button style = "float:right">Button</button>
+                    </a>
+                </div>
+                <div id = "navlink">
+                    <a href = "http://google.com">Google
+                        <button style = "float:right">Button</button>
+                    </a>
+                </div>
+                <div id = "navlink">
+                    <a href = "http://google.com">Google
+                        <button style = "float:right">Button</button>
+                    </a>
+                </div>
+                <div id = "navlink">
+                    <a href = "http://google.com">Google
+                        <button style = "float:right">Button</button>
+                    </a>
+                </div>
                 <nav>
                     <ul>
                         <li><a href="#">Innovate</a></li>
