--- a/index.html
+++ b/index.html
@@ -22,22 +22,32 @@
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
                 <div id = "navlink">
                     <a href = "http://google.com">Google
-                        <button style = "float:right">Button</button>
+                        <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
                     <a href = "http://google.com">Google
-                        <button style = "float:right">Button</button>
+                        <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
                     <a href = "http://google.com">Google
-                        <button style = "float:right">Button</button>
+                        <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
                     <a href = "http://google.com">Google
-                        <button style = "float:right">Button</button>
+                        <button>Button</button>
+                    </a>
+                </div>
+                <div id = "navlink">
+                    <a href = "http://google.com">Google
+                        <button>Button</button>
+                    </a>
+                </div>
+                <div id = "navlink">
+                    <a href = "http://google.com">Google
+                        <button>Button</button>
                     </a>
                 </div>
                 <nav>
