--- a/index.html
+++ b/index.html
@@ -21,32 +21,32 @@
             <header class="wrapper clearfix">
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
                 <div id = "navlink">
-                    <a href = "http://google.com">Google
+                    <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
-                    <a href = "http://google.com">Google
+                    <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
-                    <a href = "http://google.com">Google
+                    <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
-                    <a href = "http://google.com">Google
+                    <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
-                    <a href = "http://google.com">Google
+                    <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
                 <div id = "navlink">
-                    <a href = "http://google.com">Google
+                    <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
