--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
-                <div id = "navlink">
+                <div class = "navlink">
                     <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
-                <div id = "navlink">
+                <div class = "navlink">
                     <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
-                <div id = "navlink">
+                <div class = "navlink">
                     <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
-                <div id = "navlink">
+                <div class = "navlink">
                     <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
-                <div id = "navlink">
+                <div class = "navlink">
                     <a href = "http://google.com">
                         <button>Button</button>
                     </a>
                 </div>
-                <div id = "navlink">
+                <div class = "navlink">
                     <a href = "http://google.com">
                         <button>Button</button>
                     </a>
