--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <img src = http://upload.wikimedia.org/wikipedia/en/0/08/LearnToBeLogo.gif>
                 <div class = "navlink">
                     <a href = "http://google.com">
-                        <button>Fart</button>
+                        <button>Google</button>
                     </a>
                 </div>
                 <div class = "navlink">
                     <a href = "http://google.com">
-                        <button>Button</button>
+                        <button>Aditya is the best</button>
                     </a>
                 </div>
                 <div class = "navlink">
                     <a href = "http://google.com">
-                        <button>Button</button>
+                        <button>Better than you</button>
                     </a>
                 </div>
                 <div class = "navlink">
