--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         Welcome, I encourage you to innovate and create. Feel free to make any changes.
                         <br> Thanks,
                         <br> Aditya<br><br>
+                        NEVER MIND, SCREW YOU
                     </section>
                     <section>
                         <h2>article section h2</h2>
