--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
                     </header>
                     <section>
                         <br>
-                        Welcome, I encourage you to innovate and create. Feel free to make any changes.
+                        <h1>We really need to start working on the website if we need to finish it by the end of the year</h1><br>
+                        Welcome, I encourage you to cry and die. Feel free to make any changes.
                         <br> Thanks,
                         <br> Aditya<br><br>
-                        NEVER MIND, SCREW YOU
+                        SCREW YOU
                     </section>
                     <section>
                         <h2>article section h2</h2>
